--- a/inc/main.css
+++ b/inc/main.css
@@ -453,6 +453,30 @@ A.my-menu-toggle {
   bottom: 4em;
 }
 
+.home-banner .home-banner-slide.btb .site-width H1 {
+  font-weight: 800;
+  font-size: 80px;
+  line-height: 1em;
+  margin: 0 0 0.5em;
+  text-shadow: 0 0 15px rgba(0, 0, 0, 1);
+}
+
+.home-banner .home-banner-slide.btb .site-width H2 {
+  font-weight: 800;
+  font-size: 60px;
+  line-height: 1em;
+  margin: 0 0 0.5em;
+  text-shadow: 0 0 15px rgba(0, 0, 0, 1);
+}
+
+.home-banner .home-banner-slide.btb .site-width H3 {
+  font-weight: 800;
+  font-size: 35px;
+  line-height: 1em;
+  margin: 0 0 2em;
+  text-shadow: 0 0 15px rgba(0, 0, 0, 1);
+}
+
 .menu-holder {
   height: 82px;
 }
@@ -4185,6 +4209,10 @@ A.featured-read:active {
   .event-right {
     width: 58%;
   }
+
+  .home-banner .home-banner-slide.btb .site-width H1 { font-size: 9.5vw; margin-bottom: 1em; }
+  .home-banner .home-banner-slide.btb .site-width H2 { font-size: 7.5vw; margin-bottom: 1em; }
+  .home-banner .home-banner-slide.btb .site-width H3 { font-size: 5vw; }
 }
 
 @media only screen and (max-width: 480px) {
