--- a/inc/main.css
+++ b/inc/main.css
@@ -2603,6 +2603,16 @@ INPUT[type="checkbox"]#c-subscribe:checked + LABEL:before {
   height: 400px;
 }
 
+.btb-banner .left .btb-video:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(40,170,225,0.5);
+}
+
 .btb-banner .left .btb-video A:link,
 .btb-banner .left .btb-video A:visited {
   font-size: 87px;
@@ -2622,6 +2632,7 @@ INPUT[type="checkbox"]#c-subscribe:checked + LABEL:before {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 2;
 }
 
 .btb-banner .left .btb-video A .fa {
