--- a/inc/main.css
+++ b/inc/main.css
@@ -336,7 +336,7 @@ A.my-menu-toggle {
   width: 100%;
   height: 700px;
   background-position: center center;
-  background-repeat: none;
+  background-repeat: no-repeat;
   background-size: cover;
   -webkit-box-shadow: inset 0 20px 20px -20px rgba(0,0,0,0.55);
   -moz-box-shadow: inset 0 20px 20px -20px rgba(0,0,0,0.55);
@@ -485,9 +485,9 @@ A.my-menu-toggle {
 
 .home-banner .home-banner-slide.btb .site-width H3 {
   font-weight: 700;
-  font-size: 29px;
+  font-size: 40px;
   line-height: 1em;
-  margin: 0.5em 0 2em;
+  margin: 0 0 0.5em;
   text-shadow: 0 0 15px rgba(0, 0, 0, 1);
 }
 
