Fix user-select on Current Projects slider

--- a/inc/main.css
+++ b/inc/main.css
@@ -1667,10 +1667,10 @@ A.logo-link:active IMG {
 }
 
 .funding-current .slick-slider {
-  -webkit-user-select: all;
-  -moz-user-select: all;
-  -ms-user-select: all;
-  user-select: all;
+  -webkit-user-select: auto;
+  -moz-user-select: auto;
+  -ms-user-select: auto;
+  user-select: auto;
 }
 
 .funding-current .slick-slide {
